fix(eas): patch ~/.gradle/gradle.properties to remove MaxPermSize